--- a/index.html
+++ b/index.html
@@ -3,26 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Certificados de Votación a Excel</title>
+  <title>Certificados de Votación → Excel</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main>
     <h1>📋 Certificados de Votación → Excel</h1>
-    <p>Sube tus imágenes de certificados de votación del Meta y genera automáticamente un archivo Excel con los datos extraídos.</p>
-    
+    <p>Sube tus imágenes de certificados (o usa las ya incluidas) y genera un Excel con enlaces a las imágenes en GitHub.</p>
+
     <div class="uploader">
       <input type="file" id="fileInput" multiple accept="image/*" />
       <button id="processBtn">Procesar imágenes</button>
     </div>
 
     <div id="progress">Esperando archivos...</div>
-
     <div id="result"></div>
+    <div id="note">Nota: por defecto la página carga Tesseract y SheetJS desde CDN (recomendado para GitHub Pages). Si deseas modo offline, coloca las librerías en la carpeta <code>libs/</code> y descomenta la línea correspondiente in index.html.</div>
   </main>
 
+  <!-- CDN (recomendado for GitHub Pages) -->
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <script src="script.js"></script>
+
+  <!-- Offline libs (uncomment to use local libs)
+  <script src="libs/tesseract.min.js"></script>
+  <script src="libs/xlsx.full.min.js"></script>
+  -->
+
+  <script type="module" src="script.js"></script>
 </body>
 </html>
